	Extensions' for the steps needed to unbundle a bundle.

    o	png(type="cairo1") is defunct: the value is no longer recognized.


INSTALLATION

    o	cairo >= 1.2 is now required (1.2.0 was released in July 2006)
	for cairo-based graphics devices (which remain optional).

    o	A suitable iconv() is now required: support for
	--without-iconv has been withdrawn (it was deprecated in R 2.5.0).


INTERNATIONALIZATION

    o	There is some makefile support for adding/updating translations
	in packages: see po/README and 'Writing R Extensions'.

	There is support for the use of 'dngettext' for C-level
	translations in packages: see 'Writing R Extensions'.


BUG FIXES

    o	Assigning an extra 0-length column to a data frame by
	DF[, "foo"] <- value now works in most cases (by filling with
	NAs) or fails.	(It used to give a corrupt data frame.)

    o	validObject() avoids an error during evaluation in the case
	of various incorrect slot definitions.

    o	n:m  now returns <integer> in a few more boundary cases.

    o	The 'zap.ind' argument to printCoefmat() did not usually work as
	other code attempted to ensure that non-zero values had a
	non-zero representation.

    o	printCoefmat() formatted groups of columns together, not just
    	the cs.ind group but also the zap.ind group and a residual
    	group.  It now formats all columns except the cs.ind group
    	separately (and zaps the zap.ind group column-by-column).  The
    	main effect will be see in the output from print.anova, as
    	this grouped SS-like columns in the zap.ind group.




	**************************************************
	*						 *
	*	       2.9 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.9.1 patched


NEW FEATURES

    o	install.packages(NULL) now lists packages only once even if they
	occur in more than one repository (as the latest compatible
	version of those available will always be downloaded).
